--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+[fuzz]
+runs = 100000
+
+remappings = ['@openzeppelin=lib/openzeppelin-contracts']
+
+fs_permissions = [{ access = "read", path = "./broadcast" }]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
